@@ -2,12 +2,14 @@ package com.MyProject.KinoForum.director.service;
 
 import com.MyProject.KinoForum.director.dto.NewDirector;
 import com.MyProject.KinoForum.director.dto.DirectorDto;
+import com.MyProject.KinoForum.director.dto.UpdateDirectorDto;
 import com.MyProject.KinoForum.director.mapper.DirectorMapper;
 import com.MyProject.KinoForum.director.model.Director;
 import com.MyProject.KinoForum.director.repository.DirectorRepository;
 import com.MyProject.KinoForum.exceptions.NotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.support.PagedListHolder;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.util.ReflectionUtils;
 
@@ -32,33 +34,28 @@ public class DirectorService {
     }
 
     public Director getDirectorEntity(Long directorId) {
-        Optional<Director> user = repository.findById(directorId);
-        if(user.isEmpty()) throw new NotFoundException("Director not found");
-        return user.get();
+        Optional<Director> director = repository.findById(directorId);
+        if(director.isEmpty()) throw new NotFoundException("Director not found");
+        return director.get();
     }
 
     public List<DirectorDto> getAllDirectors(int size, int from) {
-        PagedListHolder<DirectorDto> page = new PagedListHolder<>(repository.findAll()
-                .stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList()));
-        page.setPageSize(size);
-        page.setPage(from);
-        return page.getPageList();
+        return mapper
+                .toDtoList(
+                        repository
+                                .findAll(PageRequest.of(from,size))
+                                .toList());
     }
 
     public void deleteDirector(Long directorId) {
-        repository.delete(mapper.toEntityFromDirectorDto(getDirector(directorId)));
+        repository.deleteById(directorId);
     }
-
-    public DirectorDto patchDirector(Map<String, Object> fields, Long directorId) {
-        Optional<Director> user = repository.findById(directorId);
-        if(!user.isPresent()) throw new NotFoundException("Director not found");
-        fields.forEach((k, v) -> {
-            Field field = ReflectionUtils.findField(Director.class, k);
-            field.setAccessible(true);
-            ReflectionUtils.setField(field, user.get(), v);
-        });
-        return mapper.toDto(repository.save(user.get()));
+    public DirectorDto patchDirector(UpdateDirectorDto upd, Long directorId) {
+        return mapper.toDto(
+                repository.save(
+                        mapper.updateDirector(
+                                repository
+                                        .findById(directorId)
+                                        .orElseThrow(()->new NotFoundException("Director for update not found")), upd)));
     }
 }
